fixed header spacing

--- a/docs/main_page.css
+++ b/docs/main_page.css
@@ -47,7 +47,7 @@ nav {
   .title {
     color: #7DB587;
     font-size: 24px;
-    margin-left: 40px;
+    margin-left: 55px;
     font-weight: 600;
     display: flex;
     align-items: left;
@@ -108,9 +108,6 @@ nav {
     background: #7DB581;
     width: 0%;
   }
-
-
-
 
 #menuToggle {
   display: block;
